# apps/server/openapi.yaml
@@ -6,40 +6,6 @@ info:
 servers:
   - url: 'https'
 paths:
-  /get/images:
-    post:
-      tags:
-        - get images
-      summary: get images
-      operationId: getImages
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/GetImagesRequest'
-      responses:
-        400:
-          description: bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        200:
-          description: ok
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetImagesResponse'
-        500:
-          description: 'internal error'
-      x-amazon-apigateway-integration:
-        httpMethod: post
-        type: aws_proxy
-        uri:
-          Fn::Sub:
-      x-amazon-apigateway-auth:
-        type: AWS_IAM
-
   /add/images:
     post:
       tags:
@@ -66,39 +32,143 @@ paths:
                 $ref: '#/components/schemas/AddImagesResponse'
         500:
           description: 'internal error'
+      security:
+        - api_key: [ ]
       x-amazon-apigateway-integration:
         httpMethod: post
         type: aws_proxy
         uri:
           Fn::Sub:
-      x-amazon-apigateway-auth:
-        type: AWS_IAM
+            arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AddImagesToEventFunction.Arn}/invocations
+
+
+  /add/user:
+    post:
+      tags:
+        - add user
+      summary: add user
+      operationId: addUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddUserRequest'
+      responses:
+        400:
+          description: bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddUserResponse'
+        500:
+          description: 'internal error'
+      security:
+        - api_key: [ ]
+      x-amazon-apigateway-integration:
+        httpMethod: post
+        type: aws_proxy
+        uri:
+          Fn::Sub:
+            arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AddUserToEventFunction.Arn}/invocations
+
+  /close/event:
+    post:
+      tags:
+        - close event
+      summary: close event
+      operationId: closeEvent
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CloseEventRequest'
+      responses:
+        400:
+          description: bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CloseEventResponse'
+        500:
+          description: 'internal error'
+      security:
+        - api_key: [ ]
+      x-amazon-apigateway-integration:
+        httpMethod: post
+        type: aws_proxy
+        uri:
+          Fn::Sub:
+            arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CloseEventFunction.Arn}/invocations
 
 components:
+  securitySchemes:
+    api_key:
+      type: apiKey
+      name: x-api-key
+      in: header
+
   schemas:
-    GetImagesResponse:
+    CloseEventResponse:
       type: object
       properties:
         status:
           type: string
+    CloseEventRequest:
+      type: object
+      properties:
+        eventId:
+          type: string
+      required:
+        - eventId
+    AddUserResponse:
+      type: object
+      properties:
+        status:
+          type: string
+    AddUserRequest:
+      type: object
+      properties:
+        eventId:
+          type: string
+        username:
+          type: string
+        email:
+          type: string
+        image:
+          type: string
+      required:
+        - eventId
+        - image
+        - username
+        - email
     AddImagesResponse:
       type: object
       properties:
         status:
           type: string
-    GetImagesRequest:
-      type: object
-      properties:
-        eventId:
-          type: string
-        userImage:
-          type: object
     AddImagesRequest:
       properties:
         eventId:
           type: string
-        Images:
+        images:
           type: array
+          items:
+            type: string
+      required:
+        - eventId
+        - images
     ErrorResponse:
       type: object
       properties:
