# apps/server/src/app/tryps.ts
@@ -1,9 +1,0 @@
-export interface AddImagesBody {
-    eventId: string;
-    images: object[];
-}
-
-export interface GetImagesBody {
-    eventId: string;
-    image: object;
-}
